<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/ic_nike_logo"
                    app:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:layout_marginTop="16dp"
                    android:text="@string/signUpScreenTitle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authHint"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?textAppearanceBody1"
                    android:alpha="0.8"/>

                <EditText
                    android:layout_width="@dimen/authViewWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:gravity="right|center_vertical"
                    style="@style/Theme.Nike.AuthTheme.EditText"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:layout_width="@dimen/authViewWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginTop="24dp"
                    android:gravity="right|center_vertical"
                    style="@style/Theme.Nike.AuthTheme.EditText"
                    android:inputType="textPassword"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/authViewWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Theme.Nike.AuthTheme.Button"
                    android:text="@string/signUp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginHint"
                    android:textAppearance="?textAppearanceBody1"
                    android:alpha="0.4"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/loginScreenTitle" />

            </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>