<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerInside"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:padding="2dp"
            app:shapeAppearance="@style/Avatar"
            app:srcCompat="@drawable/ic_nike_logo"/>

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="8dp"
            android:text="@string/guestUser"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/shape_divider"
            android:showDividers="middle|beginning|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favoriteProductsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_favorites_20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_order_history" />

            <TextView
                android:id="@+id/authBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                style="@style/ProfileLinks"
                app:drawableStartCompat="@drawable/ic_sign_in" />

        </LinearLayout>

    </LinearLayout>

</layout>