<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="purchaseDetail"
            type="com.ark.nikestore.data.PurchaseDetail" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchaseDetail"
            android:textColor="?android:textColorSecondary"
            android:textAppearance="?textAppearanceHeadline5"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="12dp"
                android:layout_marginHorizontal="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalPrice"
                        android:textAppearance="?textAppearanceBody1"/>

                    <TextView
                        android:id="@+id/totalPriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="150000"
                        price_in_toman="@{purchaseDetail.total_price}"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:textAppearance="?textAppearanceBody1"/>

                </FrameLayout>

                <View
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?dividerColor"/>

                <FrameLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shippingCost"
                        android:textAppearance="?textAppearanceBody1"/>

                    <TextView
                        android:id="@+id/shippingCostTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="150000"
                        price_in_toman="@{purchaseDetail.shipping_cost}"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:textAppearance="?textAppearanceBody1"/>

                </FrameLayout>

                <View
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?dividerColor"/>

                <FrameLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payablePrice"
                        android:textAppearance="?textAppearanceBody1"/>

                    <TextView
                        android:id="@+id/payablePriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="150000"
                        price_in_toman="@{purchaseDetail.payable_price}"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:textAppearance="?textAppearanceBody1"/>

                </FrameLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>