<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ark.nikestore.feature.checkout.CheckOutViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.checkout.CheckOutActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.ark.nikestore.view.customViews.BaseToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:toolbar_title="@string/checkoutToolbarTitle"/>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_comment"
                android:layout_marginHorizontal="16dp"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/purchaseStatusTv"
                    style="@style/fontPrimaryBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="?colorPrimary"
                    android:text='@{viewModel.checkoutLiveData.purchase_success ? "خرید با موفقیت انجام شد" : "خرید ناموفق"}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="نتیجه پرداخت" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchaseStatus"
                    android:layout_marginTop="32dp"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchaseStatusTv" />

                <TextView
                    android:id="@+id/orderStatusTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.checkoutLiveData.payment_status}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4"
                    android:textAppearance="?textAppearanceBody1"
                    tools:text="textView" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="?dividerColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:text="@string/price"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <TextView
                    android:id="@+id/orderPriceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceBody1"
                    price_in_toman="@{viewModel.checkoutLiveData.payable_price}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    tools:text="textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:paddingVertical="10dp"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/returnHomeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    style="@style/fontPrimaryBold"
                    android:text="@string/returnHome"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/orderHistoryBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderHistory"
                    android:textStyle="bold"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>